Update style landing page

--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
             <div class="products__card">
               <img class="products__card-img" src="./assets/img/square.png" alt="square popit" />
               <h6 class="products__card-title">Разноцветный квадратный</h6>
-              <a href="#" class="btn btn--orange">
+              <a href="#" class="btn btn--orange-dark">
                 <span class="btn__text">КУПИТЬ</span>
               </a>
             </div>
             <div class="products__card">
               <img class="products__card-img" src="./assets/img/amongus.png" alt="amongus popit" />
               <h6 class="products__card-title">Among Us, мраморный</h6>
-              <button class="btn btn--orange">
+              <button class="btn btn--orange-dark">
                 <span class="btn__text">КУПИТЬ</span>
               </button>
             </div>
             <div class="products__card">
               <img class="products__card-img" src="./assets/img/round.png" alt="round popit" />
               <h6 class="products__card-title">Разноцветный круглый</h6>
-              <button class="btn btn--orange">
+              <button class="btn btn--orange-dark">
                 <span class="btn__text">КУПИТЬ</span>
               </button>
             </div>
